2009-06-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add a method to download a string and
	decompress it if necessary.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.cs: Add support for downloading revision
	logs and diffs.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* SqlToCSharp.cs: Add support for nullable types in views.

2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Utils.cs: Don't hardcode the path to the web service.