@@ -1,3 +1,10 @@
+2009-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* DownloadLatestFile.aspx:
+	* DownloadLatestFile.aspx.cs:
+	* DownloadLatestFile.aspx.designer.cs: Added. Support for downloading
+	the latest file a lane has produced. 
+
 2009-06-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* GetRevisionLog.aspx.cs: Use new API to automatically
@@ -150,4 +157,3 @@
 	* ChangeLog: Added.
 
 	* ViewWorkTable.aspx.cs: Fix this page.
-
