@@ -1,3 +1,10 @@
+2009-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.asmx: Added FindLatestWorkFileId, support
+	for finding the latest file a lane has produced.
+
+	* WebServices.wsdl: Regenerated.
+
 2009-06-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* Download.aspx.cs: Find files in any of the subdirectories
@@ -37,4 +44,3 @@
 
 	* Makefile: Create destination directory before trying 
 	to copy files to it.
-
