@@ -1,3 +1,7 @@
+2009-07-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* WebServices.Generated.cs: Regenerated.
+
 2009-06-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* WebServices.cs: Add a method to download a string and
